# src/main/java/com/dmc/controller/ResourceController.java
@@ -1,6 +1,6 @@
 package com.dmc.controller;
 
-import com.dmc.model.RestResp;
+import com.dmc.model.Error;
 import com.dmc.model.Resource;
 import com.dmc.model.SessionInfo;
 import com.dmc.model.Menu;
@@ -90,8 +90,8 @@ public class ResourceController {
      */
     @RequestMapping("/edit")
     @ResponseBody
-    public RestResp edit(Resource resource) {
-        RestResp j = new RestResp();
+    public Error edit(Resource resource) {
+        Error j = new Error();
         resourceService.edit(resource);
 
         j.setMsg("编辑成功！");
@@ -120,8 +120,8 @@ public class ResourceController {
      */
     @RequestMapping("/delete")
     @ResponseBody
-    public RestResp delete(String id) {
-        RestResp j = new RestResp();
+    public Error delete(String id) {
+        Error j = new Error();
         resourceService.delete(id);
         j.setMsg("删除成功！");
 
